config/ux-backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ux-backend-server
  labels:
    app.kubernetes.io/component: ux-backend-server
    app.kubernetes.io/name: ux-backend-server
    app: ux-backend-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: ux-backend-server
      app.kubernetes.io/name: ux-backend-server
      app: ux-backend-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: ux-backend-server
        app.kubernetes.io/name: ux-backend-server
        app: ux-backend-server
    spec:
      serviceAccountName: ux-backend-server
      priorityClassName: system-cluster-critical
      tolerations:
      - effect: NoSchedule
        key: node.ocs.openshift.io/storage
        operator: Equal
        value: "true"
      containers:
      - name: ux-backend-server
        image: ux-backend-server:latest
        imagePullPolicy: IfNotPresent
        command:
        - /usr/local/bin/ux-backend-server
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 512Mi
        securityContext:
          runAsNonRoot: true
          readOnlyRootFilesystem: true
        volumeMounts:
        - name: onboarding-private-key
          mountPath: /etc/private-key
          readOnly: true
        - name: ux-cert-secret
          mountPath: /etc/tls/private
          readOnly: true
      - name: oauth-proxy
        image: oauth-proxy:latest
        imagePullPolicy: IfNotPresent
        args:
        - -provider=openshift
        - -https-address=:8888
        - -http-address=
        - -email-domain=*
        - -upstream=http://localhost:8080/
        - -tls-cert=/etc/tls/private/tls.crt
        - -tls-key=/etc/tls/private/tls.key
        - -cookie-secret-file=/etc/proxy/secrets/session_secret
        - -openshift-service-account=ux-backend-server
        - -openshift-delegate-urls={"/":{"group":"ocs.openshift.io","resource":"storageclusters","namespace":"openshift-storage","verb":"create"},"/info/":{"group":"authorization.k8s.io","resource":"selfsubjectaccessreviews","verb":"create"}}
        - -openshift-ca=/var/run/secrets/kubernetes.io/serviceaccount/ca.crt
        ports:
        - containerPort: 8888
          protocol: TCP
        resources:
          requests:
            cpu: 5m
            memory: 50Mi
          limits:
            cpu: 25m
            memory: 256Mi
        securityContext:
          runAsNonRoot: true
          readOnlyRootFilesystem: true
        volumeMounts:
        - name: ux-proxy-secret
          mountPath: /etc/proxy/secrets
          readOnly: true
        - name: ux-cert-secret
          mountPath: /etc/tls/private
          readOnly: true
      volumes:
      - name: onboarding-private-key
        secret:
          secretName: onboarding-private-key
          optional: true
      - name: ux-proxy-secret
        secret:
          secretName: ux-backend-proxy
      - name: ux-cert-secret
        secret:
          secretName: ux-cert-secret
