config/ux-backend/ux-backend-devicefinder-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ux-backend-server
spec:
  template:
    spec:
      containers:
      - name: ux-backend-server
