config/ux-backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ux-backend-proxy
  namespace: openshift-storage
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: ux-cert-secret
spec:
  ports:
  - name: proxy
    port: 8888
    protocol: TCP
    targetPort: 8888
  selector:
    app: ux-backend-server
  sessionAffinity: None
  type: ClusterIP
