config/ux-backend/ux-backend-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ux-backend-proxy
spec:
  podSelector:
    matchLabels:
      app: ux-backend-server
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-console
    ports:
    - protocol: TCP
      port: 8888
